added customers and attribute tag for customers name

--- a/ClientMVC/Views/Shared/_Layout.cshtml
+++ b/ClientMVC/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Stores" asp-action="Index">Stores</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">All Customers</a>
+                        </li>
                     </ul>
                 </div>
             </div>
