--- a/ClientMVC/Views/Shared/_Layout.cshtml
+++ b/ClientMVC/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Stores" asp-action="Index">Stores</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">All Orders</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">All Customers</a>
                         </li>
                     </ul>
