can now search orders by customer name or store name

--- a/ClientMVC/Views/Stores/Index.cshtml
+++ b/ClientMVC/Views/Stores/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Restaurant.Domain.Model.Store>
+﻿@model IEnumerable<Restaurant.DataAccess.Model.Stores>
 
 @{
     ViewData["Title"] = "Index";
