reverted html for search bar in orders

--- a/ClientMVC/Views/Orders/Index.cshtml
+++ b/ClientMVC/Views/Orders/Index.cshtml
@@ -9,7 +9,7 @@
 <div>
     <form asp-action="Index" method="GET" class="form-inline">
         <label class="sr-only" for="search">Search:</label>
-        <input type="search" class="form-control mb-2 mr-lg-2 mb-lg-0" id="search" name="search" placeholder="Search by Store/Customer Name" />
+        <input type="search" class="form-control mb-2 mr-sm-2 mb-sm-0" id="search" name="search" placeholder="Search by Store/Customer Name" />
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
