--- a/ClientMVC/Views/Orderlines/Create.cshtml
+++ b/ClientMVC/Views/Orderlines/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Restaurant.DataAccess.Model.Orders
+﻿@model Restaurant.DataAccess.Model.Orderlines
 
 @{
     ViewData["Title"] = "Create";
@@ -6,23 +6,24 @@
 
 <h1>Create</h1>
 
-<h4>Orders</h4>
+<h4>Orderlines</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="StoreId" class="control-label"></label>
-                <select asp-for="StoreId" class="form-control" asp-items="ViewBag.StoreId"></select>
+                <label asp-for="ProductId" class="control-label"></label>
+                <select asp-for="ProductId" class ="form-control" asp-items="ViewBag.ProductId"></select>
+            </div>
+          
+            <div class="form-group">
+                <label asp-for="Quantity" class="control-label"></label>
+                <input asp-for="Quantity" class="form-control" />
+                <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
-            </div>
-            
-            <div class="form-group">
-                <input type="submit" value="Start Order" class="btn btn-primary" />
+                <input type="submit" value="Add To Cart" class="btn btn-primary" />
             </div>
         </form>
     </div>
