--- a/ClientMVC/Views/Orderlines/Create.cshtml
+++ b/ClientMVC/Views/Orderlines/Create.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProductId" class="control-label"></label>
-                <select asp-for="ProductId" class ="form-control" asp-items="ViewBag.ProductId"></select>
+                <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
             </div>
-          
+
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
                 <input asp-for="Quantity" class="form-control" />
@@ -24,6 +24,9 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Add To Cart" class="btn btn-primary" />
+            </div>
+            <div class="form-group">
+                <input type="submit" asp-action="RedirectToOrderDetails" value="Submit Order" class="btn btn-primary" />
             </div>
         </form>
     </div>
