--- a/ClientMVC/Views/Home/Index.cshtml
+++ b/ClientMVC/Views/Home/Index.cshtml
@@ -3,6 +3,17 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    
+    <body>
+
+    </body>
 </div>
+
+<style>
+    body {
+        background-image: url('https://www.qualiapizza.com/upload/5.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+    }
+</style>
