--- a/ClientMVC/Views/Orderlines/Create.cshtml
+++ b/ClientMVC/Views/Orderlines/Create.cshtml
@@ -19,7 +19,7 @@
 
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" class="form-control" />
+                <input asp-for="Quantity" class="form-control" value="0" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
