added attributes for client side validation

--- a/ClientMVC/Views/Customers/Create.cshtml
+++ b/ClientMVC/Views/Customers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClientMVC.ViewModels.CustomersViewModel
+﻿@model Restaurant.DataAccess.Model.Customers
 
 @{
     ViewData["Title"] = "Create";
